Bug Fixes and New SVG
Fixed the navbar overlapping on small screens. I did this by adding a
media query that reduces the size of the icons in the navbar and the
margin between them.

Temp fix for the landing image appearing too small on large screens.
Added media query that increases the dimensions of the image.

Fixed the landing image going off screen on certain aspect ratios. Added
JS that checks if the image is off the screen when the landing page is
loaded in. If it is it shifts the landing section up to correct for the
overlap.

Created a new timeline format for small devices. This is so that
timeline text is readable.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,18 +1,17 @@
 // Variable Overrides
-
 $theme-colors: (
       "primary":    #bf6567,
       "secondary":  #ffa270,
-      //"success":    $success,
-      //"info":       $info,
-      //"warning":    $warning,
-      //"danger":     $danger,
       "light":      #D6D6D6,
       "dark":       #222222
 );
 
-//Mixins
 
+// Bootstrap Sass Files - this is required to change the theme
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
+
+//Mixins
 @mixin unselectable() {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -22,6 +21,10 @@ $theme-colors: (
   user-select: none;
 }
 
+
+//*********************
+//Navbar
+//*********************
 nav > *:focus, nav > *:active {
   outline: none !important;
   border: none !important;
@@ -49,7 +52,17 @@ nav > *:focus, nav > *:active {
 .navbar-brand {
   font-family: "Caviar Dreams";
   font-size: 20pt !important;
+}
 
+@media (max-width: map_get($grid-breakpoints, sm)) {
+  .navbar-brand-icon {
+    margin-right: 8px !important;
+
+    svg {
+      height: 20px;
+      width: 20px;
+    }
+  }
 }
 
 .nav-link:hover {
@@ -57,8 +70,11 @@ nav > *:focus, nav > *:active {
     text-decoration: underline !important;
 }
 
+
+//*********************
+//Main Body Elements
+//*********************
 body {
-  //background: url("../assets/Background.png");
   background-color: #D6D6D6 !important;
 }
 
@@ -69,20 +85,6 @@ html, body {
 svg {
   @include unselectable();
   pointer-events: none;
-}
-
-// Bootstrap Sass Files - this is required to change the theme
-@import "../../node_modules/bootstrap/scss/bootstrap";
-
-//fonts
-@font-face {
-  font-family: "Ink Free";
-  src: url("../fonts/InkFree.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Caviar Dreams";
-  src: url("../fonts/CaviarDreams.ttf") format("truetype");
 }
 
 //*********************
@@ -157,32 +159,27 @@ svg {
 }
 
 //tentacle2 Media Queries
-@media (max-width: 1681px)
-{
+@media (max-width: 1681px) {
   #tentacle2 {
     right: -300px;
   }
 }
-@media (max-width: 1477px)
-{
+@media (max-width: 1477px) {
   #tentacle2 {
     right: -400px;
   }
 }
-@media (max-width: 1280px)
-{
+@media (max-width: 1280px) {
   #tentacle2 {
     display: none;
   }
 }
-@media (max-width: map_get($grid-breakpoints, xl))
-{
+@media (max-width: map_get($grid-breakpoints, xl)) {
   #tentacle2 {
     display: initial;
   }
 }
-@media (max-width: 1147px)
-{
+@media (max-width: 1147px) {
   #tentacle2 {
     display: none;
   }
@@ -201,6 +198,17 @@ svg {
 //*********************
 //typography
 //*********************
+//fonts
+@font-face {
+  font-family: "Ink Free";
+  src: url("../fonts/InkFree.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Caviar Dreams";
+  src: url("../fonts/CaviarDreams.ttf") format("truetype");
+}
+
 h1 {
   @include unselectable();
   font-family: "Ink Free";
@@ -241,10 +249,59 @@ h2 {
   color: map-get($theme-colors, primary);
 }
 
+//These are the icons used in the about section
 #iconLarge {
   font-size: 24pt;
 }
 
+
+
+//*********************
+//Landing Page
+//*********************
+#landingContainerMain {
+  position: relative;
+  //top: -100px;
+}
+
+#mugAndTentacle {
+  width: 815px;
+  height: 715px;
+}
+
+@media (min-width: map-get($grid-breakpoints, xl)) {
+  #mugAndTentacle {
+    width: 978px;
+    height: 858px;
+  }
+}
+
+@media (min-width: 2000px) {
+  #mugAndTentacle {
+    width: 1223px;
+    height: 1073px;
+  }
+}
+
+@media (max-width: map-get($grid-breakpoints, lg)) {
+  #landingContainerMain {
+    top: -200px;
+  }
+}
+
+@media (max-width: map_get($grid-breakpoints, md)) {
+  #mugAndTentacle {
+    height: 600px;
+    width: 572px;
+  }
+  #smallLandingDesc {
+    margin: 0;
+  }
+}
+
+#smallLandingDesc {
+  margin: 3rem;
+}
 
 
 //*********************
@@ -254,10 +311,12 @@ h2 {
   height: 150px;
   margin-bottom: 50px;
   display: block;
+
   h1 {
     color: #aaa;
     position: absolute;
   }
+
   h3 {
     color: #000;
     position: absolute;
@@ -279,36 +338,6 @@ h2 {
   }
 }
 
-#landingContainerMain {
-  position: relative;
-  //top: -100px;
-}
-
-#mugAndTentacle {
-  width: 815.58px;
-  height: 715.3px;
-}
-
-#smallLandingDesc {
-  margin: 3rem;
-}
-
-@media (max-width: map-get($grid-breakpoints, lg)) {
-  #landingContainerMain {
-    top: -200px;
-  }
-}
-
-
-@media (max-width: map_get($grid-breakpoints, md)) {
-  #mugAndTentacle {
-    height: 600px;
-    width: 572px;
-  }
-  #smallLandingDesc {
-    margin: 0;
-  }
-}
 
 #about {
   padding-top: 75px;
